Fixed too big break-line in about me section

--- a/style.css
+++ b/style.css
@@ -141,3 +141,8 @@ audio {
 #github-space {
     padding-bottom:23px;
 }
+
+/* Misc */
+.small-break {
+    line-height:10px;
+}
